@@ -1,3 +1,7 @@
+2004-05-13  Dominique Boucher <dominique.boucher@nuecho.com>
+
+	* module2.scm (<A8711>, <B8711>):  New test - savannah bug $8711.
+
 2004-05-12  Per Bothner  <per@bothner.com>
 	    Chris Dean  <Chris.Dean@sokitomi.com>
 
